Added a Brian Pilati example

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -9,4 +9,9 @@
       <a routerLink="/weather">weather</a>
     </li>
   </ul>
+  <ul>
+    <li>
+      <a routerLink="/brian-pilati">Brian Pilati</a>
+    </li>
+  </ul>
 </nav>
