--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -5,26 +5,26 @@
 <button (click) = "handleSearch()">
   Search
 </button>
-<app-todayforecast [forecastDatum]=""/>
+<app-todayforecast [forecastDatum]="newSignal()"/>
 <app-seven-day-forecast [forecastData]=""/>
 <!-- Show cityData if it exists -->
-<div>
-    @for (city of citiesData; track city.id) {
-      <div>
-        {{ city.name }}
-      </div>
-    }
-</div>
-<div>
-  <p>City: {{cityData()?.name}}</p>
-  <p>Country: {{cityData()?.country}}</p>
-  <p>Weather: {{cityData()?.weather}}</p>
-</div>
-<div>
-    @for (item of forecastTestData; track item.id) {
-      <div>
-        {{ item.day }}
-      </div>
-    }
-</div>
+<!--<div>-->
+<!--    @for (city of citiesData; track city.id) {-->
+<!--      <div>-->
+<!--        {{ city.name }}-->
+<!--      </div>-->
+<!--    }-->
+<!--</div>-->
+<!--<div>-->
+<!--  <p>City: {{cityData()?.name}}</p>-->
+<!--  <p>Country: {{cityData()?.country}}</p>-->
+<!--  <p>Weather: {{cityData()?.weather}}</p>-->
+<!--</div>-->
+<!--<div>-->
+<!--    @for (item of forecastTestData; track item.id) {-->
+<!--      <div>-->
+<!--        {{ item.day }}-->
+<!--      </div>-->
+<!--    }-->
+<!--</div>-->
 
